--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "cmfcmf/openweathermap-php-api": "^3.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "http-interop/http-factory-guzzle": "^1.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "php-http/guzzle6-adapter": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
