--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "http-interop/http-factory-guzzle": "^1.0",
+        "laravel-notification-channels/telegram": "^0.0.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "laravelium/sitemap": "^3.1",
         "php-http/guzzle6-adapter": "^2.0"
     },
     "require-dev": {
